<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="744dp"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/issuespinner"
            android:layout_alignParentTop="true"
            android:text="@string/whatissue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_below="@+id/issuespinner"
            android:text="@string/ward"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/issuespinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:entries="@array/topic" />

        <Spinner
            android:id="@+id/wardspinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:entries="@array/ward" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wardspinner"
            android:layout_below="@+id/wardspinner"
            android:text="@string/issuetitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/TextView01"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleText"
            android:layout_alignRight="@+id/wardspinner"
            android:layout_below="@+id/titleText"
            android:text="@string/describe"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/descText"
    	    android:layout_width="fill_parent"
    	    android:layout_height="40dp"
    	    android:layout_alignLeft="@+id/textView4"
    	    android:layout_alignRight="@+id/textView4"
    	    android:layout_below="@+id/textView4"
    	    android:ems="10"
    	    android:inputType="textMultiLine" >

    	    <requestFocus />
    	</EditText>

    	<TextView
    	    android:id="@+id/textView5"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/descText"
    	    android:layout_below="@+id/descText"
    	    android:layout_marginTop="26dp"
    	    android:text="@string/image"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<Button
    	    android:id="@+id/button1"
    	    android:layout_width="150dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/textView5"
    	    android:layout_below="@+id/textView5"
    	    android:text="@string/upload" />

    	<Button
    	    android:id="@+id/button2"
    	    android:layout_width="150dp"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/button1"
    	    android:layout_below="@+id/button1"
    	    android:text="@string/campic" />

    	<TextView
    	    android:id="@+id/textView6"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/button2"
    	    android:layout_below="@+id/button2"
    	    android:layout_marginTop="15dp"
    	    android:text="@string/email"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/emailText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/textView6"
    	    android:layout_alignRight="@+id/descText"
    	    android:layout_below="@+id/textView6"
    	    android:ems="10"
    	    android:inputType="textEmailAddress" />

    	<TextView
    	    android:id="@+id/textView7"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/emailText"
    	    android:text="@string/name"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/nameText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/textView7"
    	    android:layout_alignRight="@+id/emailText"
    	    android:layout_below="@+id/textView7"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

    	<CheckBox
    	    android:id="@+id/checkBox1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/nameText"
    	    android:layout_below="@+id/nameText"
    	    android:text="@string/show_email" />

    	<Button
    	    android:id="@+id/reportbutton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/checkBox1"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="16dp"
    	    android:text="@string/report"
    	    android:onClick="report_issue" />

    	<TextView
    	    android:id="@+id/textView1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/checkBox1"
    	    android:layout_alignParentBottom="true"
    	    android:text="@string/mandatory"
    	    android:textAppearance="?android:attr/textAppearanceSmall"
    	    android:textColor="@color/red" />

</RelativeLayout>
</ScrollView>